force-app/main/default/objects/Grant_Category_Mapping__mdt/Grant_Category_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Declarative mapping between NAICS prefixes and Grants.gov funding category codes. Consumed by GrantsGovService.mapNaicsToCategory.</description>
    <label>Grant Category Mapping</label>
    <pluralLabel>Grant Category Mappings</pluralLabel>
</CustomObject>