force-app/main/default/objects/Grant_Category_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Runtime toggle to disable a mapping without deleting it.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>