force-app/main/default/objects/Grant_Category_Mapping__mdt/fields/Funding_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Funding_Category_Code__c</fullName>
    <description>Grants.gov funding category code (e.g., EN=Energy, HL=Health, ST=Science &amp; Technology).</description>
    <label>Funding Category Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>