force-app/main/default/objects/Grant_Category_Mapping__mdt/fields/Funding_Category_Label__c.field-meta.xml
<CustomField>
    <fullName>Funding_Category_Label__c</fullName>
    <description>Human-readable label for the funding category (e.g., "Energy").</description>
    <label>Funding Category Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>