force-app/main/default/objects/Grant_Category_Mapping__mdt/fields/NAICS_Prefix__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Prefix__c</fullName>
    <description>NAICS prefix (2-6 digits) matched against Account.NAICS_Code__c via startsWith().</description>
    <label>NAICS Prefix</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>