force-app/main/default/objects/Grant_Category_Mapping__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Tie-break priority when a NAICS matches multiple mappings. Lower value wins.</description>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>